stateless.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: helloworld
  name: helloworld
  namespace: test-ns2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: helloworld
    spec:
      containers:
      - image: harbor.acpglobal.uat.dbs.com/automation-test/qaimages:helloworld
        name: qaimages
        resources:
          limits:
            cpu: 300m
            memory: 600Mi
          requests:
            cpu: 300m
            memory: 600Mi
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        runAsUser: 697
        runAsGroup: 697
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: helloworld
  name: helloworld
  namespace: test-ns2
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: helloworld
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
  namespace: test-ns2
spec:
  ingressClassName: ingress-nginx-operator-ingress-instance1
  rules:
  - host: helloworld.acpsit1.uat.dbs.com
    http:
      paths:
      - backend:
          service:
            name: helloworld
            port:
              number: 80
        path: /
        pathType: Prefix
